--- a/views/todo-create.hbs
+++ b/views/todo-create.hbs
@@ -10,3 +10,6 @@
     <input id='description' name='description' type='text'>
     <input type='submit' value='Create'>
 </form>
+<form action='/todos' method='get'>
+    <input type='submit' value='Overview'>
+</form>
