--- a/views/todo-edit.hbs
+++ b/views/todo-edit.hbs
@@ -10,3 +10,6 @@
     <input id='description' name='description' type='text' value="{{data.description}}">
     <input type='submit' value='Update'>
 </form>
+<form action='/todos' method='get'>
+    <input type='submit' value='Overview'>
+</form>
