Implement update functionality
- Add edit button on overview
- Separate create and update
- Create / update and overview buttons

--- a/views/todo-create.hbs
+++ b/views/todo-create.hbs
@@ -1,4 +1,4 @@
-<h1>Create Todo</h1>
+<h1>Add Todo</h1>
 <form action="/todos" method="post">
     <label for="title">Title</label>
     <input id='title' name='title' type='text'>
@@ -8,8 +8,7 @@
     <input id='date' name='date' type='date'>
     <label for="description">Description</label>
     <input id='description' name='description' type='text'>
-    <input type='submit' value='Create'>
-</form>
-<form action='/todos' method='get'>
-    <input type='submit' value='Overview'>
+    <input type='submit' value='Create' name="createButton">
+    <input type='submit' value='Create & Overview' name="createAndOverviewButton">
+    <input type='submit' value='Overview' name="overviewButton">
 </form>
