--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -77,11 +77,15 @@
     grid-area: area-description;
 }
 
-.todo-list-item-edit {
+.todo-list-item-controls {
     grid-area: area-edit-button;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+  }
+  
+.todo-list-item-controls .form-container:not(:last-child) {
+    margin-right: 5px; /* Add margin-right to create space between buttons */
 }
 
 .custom-button {
