--- a/views/todo-list.hbs
+++ b/views/todo-list.hbs
@@ -1,48 +1,53 @@
 <h1>Todos</h1>
-    <div class="todo-list-header">
-        <form id="create" action="/todos/create" method="get">
+<div class="todo-list-header">
+    <form id="create" action="/todos/create" method="get">
         <div class="todo-list-header-upper-left">
             <input class="custom-button" type='submit' value='Create Todo'>
         </div>
-        </form>
-        <div class="todo-list-header-upper-right">
-            <form id="todos" action="/todos/" method="get">
+    </form>
+    <div class="todo-list-header-upper-right">
+        <form id="todos" action="/todos/" method="get">
             {{#if darkMode}}
                 <button class="custom-button" type="submit" value="false" name="darkMode">Bright Mode</button>
             {{else}}
                 <button class="custom-button" type="submit" value="true" name="darkMode">Dark Mode</button>
             {{/if}}
-            </form>
-        </div>
-        <div class="todo-list-header-lower-left">
-            <form id="todos-sort" action="/todos/" method="get">
-            <button class="custom-button" type="submit" value="title" name="orderBy">By Name</button>
-            <button class="custom-button" type="submit" value="dueDate" name="orderBy">By Due Date</button>
-            <button class="custom-button" type="submit" value="createDate" name="orderBy">By Creation Date</button>
-            <button class="custom-button" type="submit" value="importance" name="orderBy">By Importance</button>
-            </form>
-        </div>
-        <div class="todo-list-header-lower-right">
-            <form id="todos-filter" action="/todos/" method="get">
+        </form>
+    </div>
+    <div class="todo-list-header-lower-left">
+        <form id="todos-sort" action="/todos/" method="get">
+            <button class="custom-button" type="submit" value="title" name="orderBy">
+                {{get_button_label "Name" "title" orderBy orderDescending}}</button>
+            <button class="custom-button" type="submit" value="dueDate" name="orderBy">
+                {{get_button_label "Due Date" "dueDate" orderBy orderDescending}}</button>
+            <button class="custom-button" type="submit" value="createDate" name="orderBy">
+                {{get_button_label "Creation Date" "createDate" orderBy orderDescending}}</button>
+            <button class="custom-button" type="submit" value="importance" name="orderBy">
+                {{get_button_label "Importance" "importance" orderBy orderDescending}}</button>
+        </form>
+    </div>
+    <div class="todo-list-header-lower-right">
+        <form id="todos-filter" action="/todos/" method="get">
             {{#if filterCompleted}}
                 <button class="custom-button" type="submit" value="false" name="filterCompleted">Show All</button>
             {{else}}
-                <button class="custom-button" type="submit" value="true" name="filterCompleted">Filter Completed</button>
+                <button class="custom-button" type="submit" value="true" name="filterCompleted">Filter Completed
+                </button>
             {{/if}}
-            </form>
-        </div>
+        </form>
     </div>
+</div>
 <div class="todo-list">
     {{#each data}}
         <div class="todo-list-item">
             <div class="todo-list-item-state">
                 {{#if (is_done this.state)}}
-                    <input class="todo-list-item-check-input" type="checkbox" checked disabled>
+                    <input class="todo-list-item-check-input" type="checkbox" id="completed" checked disabled>
                     <label class="todo-list-item-check-label" for="completed">
                         Completed
                     </label>
                 {{else}}
-                    <input class="todo-list-item-check-input" type="checkbox" disabled>
+                    <input class="todo-list-item-check-input" type="checkbox" id="completed" disabled>
                     <label class="todo-list-item-check-label" for="completed">
                         Open
                     </label>
@@ -54,19 +59,19 @@
             {{else}}
                 <div class="todo-list-item-due-date">{{days_until_due this.dueDate}}</div>
             {{/if}}
-            <div class="todo-list-item-importance">{{this.importance}}</div>
+            <div class="todo-list-item-importance">{{get_importance_label this.importance}}</div>
             <div class="todo-list-item-description">{{this.description}}</div>
             <div class="todo-list-item-controls">
-            <div class="form-container">
-                <form action='/todos/{{this._id}}' method='get'>
-                <button class="custom-button" data-todo-id="{{this._id}}">Edit</button>
-                </form>
-            </div>
-            <div class="form-container">
-                <form action='/todos/{{this._id}}' method='post'>
-                <button class="custom-button" data-todo-id="{{this._id}}">Delete</button>
-                </form>
-            </div>
+                <div class="form-container">
+                    <form action='/todos/{{this._id}}' method='get'>
+                        <button class="custom-button" data-todo-id="{{this._id}}">Edit</button>
+                    </form>
+                </div>
+                <div class="form-container">
+                    <form action='/todos/{{this._id}}' method='post'>
+                        <button class="custom-button" data-todo-id="{{this._id}}">Delete</button>
+                    </form>
+                </div>
             </div>
         </div>
     {{/each}}
