--- a/views/todo-edit.hbs
+++ b/views/todo-edit.hbs
@@ -2,9 +2,9 @@
 <form action="/todos" method="post">
     <label for="title">Title</label>
     <input type="hidden" id="todoId" name="todoId" value={{data._id}} />
-    <input id='title' name='title' type='text' value="{{data.title}}">
+    <input id='title' name='title' type='text' required="required" value="{{data.title}}">
     <label for="importance">Importance</label>
-    <input id='importance' name='importance' type='number' value="{{data.importance}}">
+    <input id='importance' name='importance' type='number' min="1" max="5" value="{{data.importance}}">
     <label for="date">Due date</label>
     <input id='date' name='date' type='date' value="{{data.dueDate}}">
     <label for="description">Description</label>
