--- a/views/todo-list.hbs
+++ b/views/todo-list.hbs
@@ -47,8 +47,8 @@
                         Completed
                     </label>
                 {{else}}
-                    <input class="todo-list-item-check-input" type="checkbox" id="completed" disabled>
-                    <label class="todo-list-item-check-label" for="completed">
+                    <input class="todo-list-item-check-input" type="checkbox" id="open" disabled>
+                    <label class="todo-list-item-check-label" for="open">
                         Open
                     </label>
                 {{/if}}
