--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,7 @@
 /* styles.css */
+body {
+    font-family: Verdana, sans-serif;
+}
 
 .todo-list-header {
     display: grid;
@@ -38,16 +41,19 @@
     flex-direction: column;
     margin-top: 20px; /* Add a margin on top of the container */
     gap: 10px; /* Adjust the value to set the desired space between todo items */
+    grid-row-gap: 1px;
+    background-color: #000000;
 }
 
 .todo-list-item {
     display: grid;
     grid-template-rows: repeat(2, auto);
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 1fr 2fr 1fr 1fr;
     grid-template-areas:
         "area-due-date area-title       area-importance area-edit-button"
         "area-state    area-description area-importance area-edit-button";
-    background-color: #797979; /* Optional: Add background color to visually separate the todo items */
+    grid-row-gap: 7px;
+    background-color: #ffffff; /* Optional: Add background color to visually separate the todo items */
     padding: 10px; /* Optional: Add padding to the todo items */
 }
 
@@ -70,7 +76,10 @@
 }
 
 .todo-list-item-importance {
+    color: #ffea00;
+    font-size: x-large;
     grid-area: area-importance;
+    justify-self: end;
 }
 
 .todo-list-item-description {
@@ -94,6 +103,7 @@
     border: none; /* Optional: Remove the button border */
     padding: 5px 10px; /* Optional: Add padding to the button */
     cursor: pointer; /* Optional: Add a cursor pointer on hover */
+    border-radius: 5px
 }
 
 .custom-button:hover {
