--- a/views/todo-list.hbs
+++ b/views/todo-list.hbs
@@ -1,11 +1,11 @@
 <h1>Todos</h1>
 <div class="todo-list-header">
     <form id="create" action="/todos/create" method="get">
-        <div class="todo-list-header-upper-left">
+        <div class="todo-list-header-create">
             <input class="custom-button" type='submit' value='Create Todo'>
         </div>
     </form>
-    <div class="todo-list-header-upper-right">
+    <div class="todo-list-header-dark-mode">
         <form id="todos" action="/todos/" method="get">
             {{#if darkMode}}
                 <button class="custom-button" type="submit" value="false" name="darkMode">Bright Mode</button>
@@ -14,19 +14,27 @@
             {{/if}}
         </form>
     </div>
-    <div class="todo-list-header-lower-left">
-        <form id="todos-sort" action="/todos/" method="get">
-            <button class="custom-button" type="submit" value={{get_button_sortingvalue "title" orderBy orderDescending}} name="orderBy">
+    <div class="todo-list-header-sort">
+        <form class="todo-list-header-sort-flex" id="todos-sort" action="/todos/" method="get">
+            <button class="custom-button" type="submit" value={{get_button_sortingvalue "title" orderBy
+                                                                                        orderDescending}}
+                    name="orderBy">
                 {{get_button_label "Name" "title" orderBy orderDescending}}</button>
-            <button class="custom-button" type="submit" value={{get_button_sortingvalue "dueDate" orderBy orderDescending}} name="orderBy">
+            <button class="custom-button" type="submit" value={{get_button_sortingvalue "dueDate" orderBy
+                                                                                        orderDescending}}
+                    name="orderBy">
                 {{get_button_label "Due Date" "dueDate" orderBy orderDescending}}</button>
-            <button class="custom-button" type="submit" value={{get_button_sortingvalue "createDate" orderBy orderDescending}} name="orderBy">
+            <button class="custom-button" type="submit" value={{get_button_sortingvalue "createDate" orderBy
+                                                                                        orderDescending}}
+                    name="orderBy">
                 {{get_button_label "Creation Date" "createDate" orderBy orderDescending}}</button>
-            <button class="custom-button" type="submit" value={{get_button_sortingvalue "importance" orderBy orderDescending}} name="orderBy">
+            <button class="custom-button" type="submit" value={{get_button_sortingvalue "importance" orderBy
+                                                                                        orderDescending}}
+                    name="orderBy">
                 {{get_button_label "Importance" "importance" orderBy orderDescending}}</button>
         </form>
     </div>
-    <div class="todo-list-header-lower-right">
+    <div class="todo-list-header-filter">
         <form id="todos-filter" action="/todos/" method="get">
             {{#if filterCompleted}}
                 <button class="custom-button" type="submit" value="false" name="filterCompleted">Show All</button>
@@ -69,7 +77,7 @@
                 </div>
                 <div class="form-container">
                     <form action='/todos/{{this._id}}' method='post'>
-                        <button class="custom-button" data-todo-id="{{this._id}}">Delete</button>
+                        <button class="custom-button custom-button-delete" data-todo-id="{{this._id}}">Delete</button>
                     </form>
                 </div>
             </div>
