--- a/views/todo-edit.hbs
+++ b/views/todo-edit.hbs
@@ -1,32 +1,44 @@
 <h1>Edit Todo</h1>
-<form action="/todos" method="post">
-    <label for="title">Title</label>
-    <input type="hidden" id="todoId" name="todoId" value={{data._id}} />
-    <input id='title' name='title' type='text' required="required" value="{{data.title}}">
-    <label for="importance">Importance</label>
-    <div class="importance">
-        <input class="importance" id="importance-5" type="radio" value="5" name="importance" {{#if importanceIsSet5}} checked {{/if}}/>
-        <label class="importance" for="importance-5"></label>
-        <input class="importance" id="importance-4" type="radio" value="4" name="importance" {{#if importanceIsSet4}} checked {{/if}}/>
-        <label class="importance" for="importance-4"></label>
-        <input class="importance" id="importance-3" type="radio" value="3" name="importance" {{#if importanceIsSet3}} checked {{/if}}/>
-        <label class="importance" for="importance-3"></label>
-        <input class="importance" id="importance-2" type="radio" value="2" name="importance" {{#if importanceIsSet2}} checked {{/if}}/>
-        <label class="importance" for="importance-2"></label>
-        <input class="importance" id="importance-1" type="radio" value="1" name="importance" {{#if importanceIsSet1}} checked {{/if}}/>
-        <label class="importance" for="importance-1"></label>
+<form class="todo-detail-form" action="/todos" method="post">
+    <div class="todo-detail-input">
+        <input type="hidden" id="todoId" name="todoId" value={{data._id}} />
+        <label for="title">Title</label>
+        <input class="text-input" id='title' name='title' type='text' required value="{{data.title}}">
+        <label for="importance">Importance</label>
+        <div class="importance">
+            <input class="importance" id="importance-5" type="radio" value="5" name="importance" {{#if
+                    importanceIsSet5}} checked {{/if}}/>
+            <label class="importance" for="importance-5"></label>
+            <input class="importance" id="importance-4" type="radio" value="4" name="importance" {{#if
+                    importanceIsSet4}} checked {{/if}}/>
+            <label class="importance" for="importance-4"></label>
+            <input class="importance" id="importance-3" type="radio" value="3" name="importance" {{#if
+                    importanceIsSet3}} checked {{/if}}/>
+            <label class="importance" for="importance-3"></label>
+            <input class="importance" id="importance-2" type="radio" value="2" name="importance" {{#if
+                    importanceIsSet2}} checked {{/if}}/>
+            <label class="importance" for="importance-2"></label>
+            <input class="importance" id="importance-1" type="radio" value="1" name="importance" {{#if
+                    importanceIsSet1}} checked {{/if}}/>
+            <label class="importance" for="importance-1"></label>
+        </div>
+        <label for="date">Due date</label>
+        <input class="text-input" id='date' name='date' type='date' value="{{date}}">
+        <label>
+            {{#if (is_done data.state)}}
+                <input id="state" name="state" type="checkbox" checked>
+            {{else}}
+                <input id="state" name="state" type="checkbox">
+            {{/if}}
+            <label for="state">Completed</label>
+        </label>
+        <label for="description">Description</label>
+        <textarea class="text-input" id='description' rows="5" maxlength="1000"
+                  name='description'>{{data.description}}</textarea>
     </div>
-    <label for="date">Due date</label>
-    <input id='date' name='date' type='date' value="{{data.dueDate}}">
-    <label for="description">Description</label>
-    <input id='description' name='description' type='text' value="{{data.description}}">
-    <label for="done">Done?</label>
-    {{#if (is_done data.state)}}
-        <input id="state" name="state" type="checkbox" checked>
-    {{else}}
-        <input id="state" name="state" type="checkbox">
-    {{/if}}
-    <input type='submit' value='Update' name="updateButton">
-    <input type='submit' value='Update & Overview' name="updateAndOverviewButton">
-    <input type='submit' value='Overview' name="overviewButton">
+    <div class="todo-detail-controls">
+        <input class="custom-button" type='submit' value='Update' name="updateButton">
+        <input class="custom-button" type='submit' value='Update & Overview' name="updateAndOverviewButton">
+        <input class="custom-button" type='submit' value='Overview' name="overviewButton">
+    </div>
 </form>
