--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: Verdana, sans-serif;
 }
 
-@media screen and (min-width: 880px) {
+@media screen and (min-width: 480px) {
     body {
         margin-left: 5%;
         margin-right: 5%;
@@ -42,10 +42,11 @@ body {
 .todo-list-header-filter {
     grid-column: 2 / span 1;
     grid-row: 1 / span 1;
-    justify-self: end; /* Align content to the right side */
+    justify-self: center; /* Align content to the right side */
 }
 
-@media screen and (min-width: 880px) {
+@media screen and (min-width: 480px) {
+
     .todo-list-header {
         display: grid;
         grid-template-columns: 4fr 1fr;
@@ -81,8 +82,6 @@ body {
     }
 }
 
-
-
 .todo-list {
     display: flex;
     flex-direction: column;
@@ -94,26 +93,50 @@ body {
 
 .todo-list-item {
     display: grid;
-    grid-template-rows: repeat(2, auto);
-    grid-template-columns: 1fr 2fr 1fr 1fr;
+    grid-template-rows: repeat(3, auto);
+    grid-template-columns: 1fr 2fr 1fr;
     grid-template-areas:
-        "area-due-date area-title       area-importance area-edit-button"
-        "area-state    area-description area-importance area-edit-button";
+        "area-due-date area-title       area-importance"
+        "area-state    area-description area-importance"
+        "area-edit-button area-edit-button area-edit-button";
     grid-row-gap: 7px;
     background-color: #ffffff; /* Optional: Add background color to visually separate the todo items */
     padding: 10px; /* Optional: Add padding to the todo items */
+    overflow: hidden;
+}
+
+@media screen and (min-width: 480px) {
+    .todo-list-item {
+        display: grid;
+        grid-template-rows: repeat(2, auto);
+        grid-template-columns: 1fr 2fr 1fr 1fr;
+        grid-template-areas:
+        "area-due-date area-title       area-importance area-edit-button"
+        "area-state    area-description area-importance area-edit-button";
+        grid-row-gap: 7px;
+        background-color: #ffffff; /* Optional: Add background color to visually separate the todo items */
+        padding: 10px; /* Optional: Add padding to the todo items */
+        overflow: hidden;
+    }
 }
 
 .todo-list-item-state {
     grid-area: area-state;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .todo-list-item-title {
     grid-area: area-title;
+    font-weight: bold;
 }
 
 .todo-list-item-due-date {
     grid-area: area-due-date;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .todo-list-item-due-date-over {
@@ -131,6 +154,9 @@ body {
 
 .todo-list-item-description {
     grid-area: area-description;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .todo-list-item-controls {
@@ -138,6 +164,21 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+}
+
+.todo-list-item-controls>form{
+    display: flex;
+    flex: 1;
+
+}
+
+@media screen and (min-width: 480px) {
+    .todo-list-item-controls {
+        grid-area: area-edit-button;
+        display: flex;
+        justify-content: space-evenly;
+        margin-left: 10px;
+    }
 }
 
 .todo-list-item-controls .form-container:not(:last-child) {
@@ -184,7 +225,7 @@ body {
     box-shadow: 0 0 5px #0066cc;
 }
 
-@media screen and (min-width: 880px) {
+@media screen and (min-width: 480px) {
     .todo-detail-controls{
         flex-direction: row;
     }
@@ -203,17 +244,21 @@ textarea{
     cursor: pointer; /* Optional: Add a cursor pointer on hover */
     border-radius: 5px;
     white-space: nowrap;
+    flex: 1;
 }
 
+@media screen and (min-width: 480px) {
+    .custom-button {
+        flex: none;
+    }
+}
 .custom-button-delete{
-    background-color: red; /* Optional: Add a background color to the button */
+    background-color: #B30000; /* Optional: Add a background color to the button */
 }
 
 .custom-button:hover {
     background-color: #0056b3; /* Optional: Change the background color on hover */
 }
-
-
 
 input.importance {
     display: none;
