--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -6,15 +6,24 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Todo</title>
+    <link rel="stylesheet" href="/css/styles.css">
     {{#if darkMode}}
         <style>
             body {
                 background: black;
                 color: white;
             }
+            .todo-list {
+                background-color: #ffffff;
+            }
+
+            .todo-list-item {
+                background-color: #000000; /* Optional: Add background color to visually separate the todo items */
+            }
+
+
         </style>
     {{/if}}
-    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 {{{body}}}
