--- a/views/todo-create.hbs
+++ b/views/todo-create.hbs
@@ -24,6 +24,6 @@
     <div class="todo-detail-controls">
         <input class="custom-button" type='submit' value='Create' name="createButton">
         <input class="custom-button" type='submit' value='Create & Overview' name="createAndOverviewButton">
-        <input class="custom-button" type='submit' value='Overview' name="overviewButton">
+        <input class="custom-button" type='submit' value='Overview' name="overviewButton" formnovalidate>
     </div>
 </form>
