--- a/views/todo-edit.hbs
+++ b/views/todo-edit.hbs
@@ -39,6 +39,6 @@
     <div class="todo-detail-controls">
         <input class="custom-button" type='submit' value='Update' name="updateButton">
         <input class="custom-button" type='submit' value='Update & Overview' name="updateAndOverviewButton">
-        <input class="custom-button" type='submit' value='Overview' name="overviewButton">
+        <input class="custom-button" type='submit' value='Overview' name="overviewButton" formnovalidate>
     </div>
 </form>
