--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -16,12 +16,12 @@
             .todo-list {
                 background-color: #ffffff;
             }
-
             .todo-list-item {
-                background-color: #000000; /* Optional: Add background color to visually separate the todo items */
+                background-color: #000000;
             }
-
-
+            .todo-list-empty {
+                background-color: #000000;
+            }
         </style>
     {{/if}}
 </head>
