--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,288 +1,295 @@
 /* styles.css */
+
+/* base styles */
+
 body {
-    font-family: Verdana, sans-serif;
+  font-family: Verdana, sans-serif;
 }
 
-@media screen and (min-width: 480px) {
-    body {
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-}
+/* todo list styles */
 
 .todo-list-header {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 4fr;
-    gap: 10px; /* Adjust the value to set the desired space between rows */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 4fr;
+  gap: 10px; /* Adjust the value to set the desired space between rows */
 }
 
 .todo-list-header-create {
-    grid-column: 1 / span 1;
-    grid-row: 1 / span 1;
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
 }
 
 .todo-list-header-dark-mode {
-    grid-column: 3 / span 1;
-    grid-row: 1 / span 1;
-    justify-self: end; /* Align content to the right side */
+  grid-column: 3 / span 1;
+  grid-row: 1 / span 1;
+  justify-self: end; /* Align content to the right side */
 }
 
 .todo-list-header-sort {
-    grid-column: 1 / span 3;
-    grid-row: 2 / span 1;
+  grid-column: 1 / span 3;
+  grid-row: 2 / span 1;
 }
 
-.todo-list-header-sort-flex{
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
+.todo-list-header-sort-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
 
 .todo-list-header-filter {
-    grid-column: 2 / span 1;
-    grid-row: 1 / span 1;
-    justify-self: center; /* Align content to the right side */
-}
-
-@media screen and (min-width: 480px) {
-
-    .todo-list-header {
-        display: grid;
-        grid-template-columns: 4fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        gap: 10px; /* Adjust the value to set the desired space between rows */
-    }
-
-    .todo-list-header-create {
-        grid-column: 1 / span 1;
-        grid-row: 1 / span 1;
-    }
-
-    .todo-list-header-dark-mode {
-        grid-column: 2 / span 1;
-        grid-row: 1 / span 1;
-        justify-self: end; /* Align content to the right side */
-    }
-
-    .todo-list-header-sort {
-        grid-column: 1 / span 1;
-        grid-row: 2 / span 1;
-    }
-
-    .todo-list-header-filter {
-        grid-column: 2 / span 1;
-        grid-row: 2 / span 1;
-        justify-self: end; /* Align content to the right side */
-    }
-
-    .todo-list-header-sort-flex{
-        display: flex;
-        flex-direction: row;
-    }
+  grid-column: 2 / span 1;
+  grid-row: 1 / span 1;
+  justify-self: center;
 }
 
 .todo-list {
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px; /* Add a margin on top of the container */
-    gap: 10px; /* Adjust the value to set the desired space between todo items */
-    grid-row-gap: 1px;
-    background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px; /* Add a margin on top of the container */
+  gap: 10px; /* Adjust the value to set the desired space between todo items */
+  grid-row-gap: 1px;
+  background-color: #000000;
 }
+
+.todo-list-empty {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+}
+
+/* todo list item styles */
 
 .todo-list-item {
-    display: grid;
-    grid-template-rows: repeat(3, auto);
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-areas:
-        "area-due-date area-title       area-importance"
-        "area-state    area-description area-importance"
-        "area-edit-button area-edit-button area-edit-button";
-    grid-row-gap: 7px;
-    background-color: #ffffff; /* Optional: Add background color to visually separate the todo items */
-    padding: 10px; /* Optional: Add padding to the todo items */
-    overflow: hidden;
-}
-
-@media screen and (min-width: 480px) {
-    .todo-list-item {
-        display: grid;
-        grid-template-rows: repeat(2, auto);
-        grid-template-columns: 1fr 2fr 1fr 1fr;
-        grid-template-areas:
-        "area-due-date area-title       area-importance area-edit-button"
-        "area-state    area-description area-importance area-edit-button";
-        grid-row-gap: 7px;
-        background-color: #ffffff; /* Optional: Add background color to visually separate the todo items */
-        padding: 10px; /* Optional: Add padding to the todo items */
-        overflow: hidden;
-    }
+  display: grid;
+  grid-template-rows: repeat(3, auto);
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-areas:
+    "area-due-date area-title       area-importance"
+    "area-state    area-description area-importance"
+    "area-edit-button area-edit-button area-edit-button";
+  grid-row-gap: 7px;
+  background-color: #ffffff;
+  padding: 10px;
+  overflow: hidden;
 }
 
 .todo-list-item-state {
-    grid-area: area-state;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  grid-area: area-state;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .todo-list-item-title {
-    grid-area: area-title;
-    font-weight: bold;
+  grid-area: area-title;
+  font-weight: bold;
 }
 
 .todo-list-item-due-date {
-    grid-area: area-due-date;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  grid-area: area-due-date;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .todo-list-item-due-date-over {
-    /* Inherit styles from .todo-list-item-due-date */
-    grid-area: area-due-date;
-    color: red;
+  grid-area: area-due-date;
+  color: red;
 }
 
 .todo-list-item-importance {
-    color: #ffea00;
-    font-size: x-large;
-    grid-area: area-importance;
-    justify-self: end;
+  grid-area: area-importance;
+  display: flex;
+  justify-self: end;
+  align-items: center;
+  color: #ffea00;
+  font-size: x-large;
 }
 
 .todo-list-item-description {
-    grid-area: area-description;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  grid-area: area-description;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .todo-list-item-controls {
-    grid-area: area-edit-button;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  grid-area: area-edit-button;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-.todo-list-item-controls>form{
-    display: flex;
-    flex: 1;
-
-}
-
-@media screen and (min-width: 480px) {
-    .todo-list-item-controls {
-        grid-area: area-edit-button;
-        display: flex;
-        justify-content: space-evenly;
-        margin-left: 10px;
-    }
+.todo-list-item-controls > form {
+  display: flex;
+  flex: 1;
 }
 
 .todo-list-item-controls .form-container:not(:last-child) {
-    margin-right: 5px; /* Add margin-right to create space between buttons */
+  margin-right: 5px; /* Add margin-right to create space between buttons */
 }
 
-.todo-detail-form{
-    display: flex;
-    flex-direction: column;
+/* todo detail styles */
+
+.todo-detail-form {
+  display: flex;
+  flex-direction: column;
 }
 
-.todo-detail-input{
-    display: flex;
-    flex-direction: column;
+.todo-detail-input {
+  display: flex;
+  flex-direction: column;
 }
 
-.todo-detail-controls{
-    display: flex;
-    flex-direction: column;
-    margin-top: 10px;
+.todo-detail-controls {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
 }
 
 .text-input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    color: #333;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  color: #333;
 }
 
-.todo-detail-input>label{
-    margin-top: 15px;
-    margin-bottom: 5px;
+.todo-detail-input > label {
+  margin-top: 15px;
+  margin-bottom: 5px;
 }
 
-
-.text-input.description{
-    height: 100px;
+.text-input.description {
+  height: 100px;
 }
 
 .text-input:focus {
-    outline: none;
-    border-color: #0066cc;
-    box-shadow: 0 0 5px #0066cc;
+  outline: none;
+  border-color: #0066cc;
+  box-shadow: 0 0 5px #0066cc;
 }
 
-@media screen and (min-width: 480px) {
-    .todo-detail-controls{
-        flex-direction: row;
-    }
+textarea {
+  resize: none;
 }
 
-textarea{
-    resize: none;
-}
+/* button styles */
 
 .custom-button {
-    background-color: #007bff; /* Optional: Add a background color to the button */
-    color: white; /* Optional: Set the text color of the button */
-    border: none; /* Optional: Remove the button border */
-    padding: 5px 10px; /* Optional: Add padding to the button */
-    margin: 3px;
-    cursor: pointer; /* Optional: Add a cursor pointer on hover */
-    border-radius: 5px;
-    white-space: nowrap;
-    flex: 1;
+  background-color: #007bff; /* Add a background color to the button */
+  color: white; /* Set the text color of the button */
+  border: none; /* Remove the button border */
+  padding: 5px 10px; /* Add padding to the button */
+  margin: 3px;
+  cursor: pointer; /* Add a cursor pointer on hover */
+  border-radius: 5px;
+  white-space: nowrap;
+  flex: 1;
 }
 
-@media screen and (min-width: 480px) {
-    .custom-button {
-        flex: none;
-    }
-}
-.custom-button-delete{
-    background-color: #B30000; /* Optional: Add a background color to the button */
+.custom-button-delete {
+  background-color: #b30000;
 }
 
 .custom-button:hover {
-    background-color: #0056b3; /* Optional: Change the background color on hover */
+  background-color: #0056b3;
 }
 
+.custom-button-delete:hover {
+  background-color: #7c0000;
+}
+
+/* importance styles */
+
 input.importance {
-    display: none;
+  display: none;
 }
 
 label.importance {
-    float: right;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-right: 10px;
-    font-size: 24px;
-    color: #444;
-    transition: all .2s;
+  float: right;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 10px;
+  font-size: 24px;
+  color: #444;
+  transition: all 0.2s;
 }
 
 input.importance:checked ~ label.importance:before {
-    color: #ffea00;
-    transition: all .25s;
+  color: #ffea00;
+  transition: all 0.25s;
 }
 
 label.importance:hover {
-    transform: rotate(-30deg) scale(1.2);
+  transform: rotate(-30deg) scale(1.2);
 }
 
 label.importance:before {
-    content: "★";
+  content: "★";
+}
+
+/* desktop styles */
+@media screen and (min-width: 480px) {
+  /* base desktop styles */
+
+  body {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  /* todo list desktop styles */
+
+  .todo-list-header {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+  }
+
+  .todo-list-header-dark-mode {
+    grid-column: 2 / span 1;
+  }
+
+  .todo-list-header-sort {
+    grid-column: 1 / span 1;
+  }
+
+  .todo-list-header-filter {
+    grid-column: 2 / span 1;
+    grid-row: 2 / span 1;
+    justify-self: end;
+  }
+
+  .todo-list-header-sort-flex {
+    flex-direction: row;
+  }
+
+  /* todo list item desktop styles */
+
+  .todo-list-item {
+    grid-template-rows: repeat(2, auto);
+    grid-template-columns: 1fr 2fr 1fr 1fr;
+    grid-template-areas:
+      "area-due-date area-title       area-importance area-edit-button"
+      "area-state    area-description area-importance area-edit-button";
+  }
+
+  .todo-list-item-controls > form {
+    justify-content: flex-end; /* Align form to the right */
+  }
+
+  /* todo detail desktop styles */
+
+  .todo-detail-controls {
+    flex-direction: row;
+  }
+
+  /* button desktop styles */
+
+  .custom-button {
+    flex: none;
+  }
 }
