--- a/views/todo-list.hbs
+++ b/views/todo-list.hbs
@@ -81,7 +81,7 @@
             </div>
         {{/each}}
     {{else}}
-        <div class="todo-list-item">Sun, Fun, and Nothing TODO!</div>
+        <div class="todo-list-empty">Sun, Fun, and Nothing TODO!</div>
     {{/if}}
 </div>
 
