--- a/views/todo-list.hbs
+++ b/views/todo-list.hbs
@@ -1,4 +1,3 @@
-<h1>Todos</h1>
 <div class="todo-list-header">
     <form id="create" action="/todos/create" method="get">
         <div class="todo-list-header-create">
@@ -81,9 +80,8 @@
             </div>
         {{/each}}
     {{else}}
-        <div class="todo-list-empty">Sun, Fun, and Nothing TODO!</div>
+        <div class="todo-list-empty">Sun, Fun, and Nothing TODO!<br>☀️🌴😎🏖️🍹🌊🕶️🏝️🌞🎉😄</div>
     {{/if}}
 </div>
-
 
 
