--- a/views/404.hbs
+++ b/views/404.hbs
@@ -1,3 +1,3 @@
 <div>
-    The requested ressource with id="{{ressourceId}}" does not exist.
+    The requested resource with id="{{ressourceId}}" does not exist.
 </div>
